Fix bad import references

--- a/packages/react-pouchdb/package.json
+++ b/packages/react-pouchdb/package.json
@@ -15,8 +15,7 @@
   },
   "type": "module",
   "exports": [
-    "./src/index.ts",
-    "./src/index.js"
+    "./src/index.ts"
   ],
   "types": "./dist/index.d.ts",
   "files": [
