--- a/apps/hello-world/package.json
+++ b/apps/hello-world/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/hello-world",
-  "version": "0.1.20",
+  "version": "0.1.21",
   "description": "A hello world example using the webdev package.",
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
   "license": "MIT",
@@ -10,7 +10,8 @@
     "build": "webpack",
     "tsc": "tsc",
     "lint": "eslint .",
-    "lint:fix": "eslint --fix ."
+    "lint:fix": "eslint --fix .",
+    "test": "jest"
   },
   "dependencies": {
     "@stanlemon/webdev": "*",
