--- a/renovate.json5
+++ b/renovate.json5
@@ -57,8 +57,8 @@
       schedule: [
         'after 10am and before 4pm on saturday',
       ],
-      matchPackagePatterns: [
-        '/^eslint/',
+      matchPackageNames: [
+        '//^eslint//',
       ],
     },
     {
@@ -96,8 +96,8 @@
       minimumReleaseAge: null,                // No waiting period
       automerge: true,
       automergeType: 'branch',          // Merge immediately via branch
-      matchPackagePatterns: [
-        '^@stanlemon/',
+      matchPackageNames: [
+        '/^@stanlemon//',
       ],
     },
     {
