--- a/apps/template/package.json
+++ b/apps/template/package.json
@@ -20,6 +20,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
+  "engines": {
+    "node": "^20.0.0"
+  },
   "dependencies": {
     "@stanlemon/server-with-auth": "*",
     "@stanlemon/webdev": "*",
