--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -8,7 +8,7 @@
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
   "license": "MIT",
   "engines": {
-    "node": ">=20.0"
+    "node": "^20.0.0"
   },
   "type": "module",
   "exports": {
