--- a/packages/webdev/package.json
+++ b/packages/webdev/package.json
@@ -11,7 +11,7 @@
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
   "license": "MIT",
   "engines": {
-    "node": ">=20.0"
+    "node": "^20.0.0"
   },
   "type": "module",
   "scripts": {
