Group major, minor and patch for react

--- a/renovate.json5
+++ b/renovate.json5
@@ -65,6 +65,11 @@
     {
       // Group all react related packages
       'groupName': 'react monorepo',
+      matchUpdateTypes: [
+        'major',
+        'minor',
+        'patch',
+      ],
       'matchPackageNames': [
         'react',
         'react-dom',
