Try to get eslint to work correctly

--- a/renovate.json5
+++ b/renovate.json5
@@ -72,7 +72,7 @@
       matchPackageNames: [
         '//^eslint$//',
         '//^typescript-eslint$//',
-        '//^eslint-//',
+        '//^eslint-*//',
       ],
     },
     {
