--- a/renovate.json5
+++ b/renovate.json5
@@ -68,7 +68,7 @@
     },
     {
       // Group all eslint related packages
-      groupName: 'eslint packages',
+      groupName: 'eslint',
       matchPackageNames: [
         '/^eslint$/',
         '/^typescript-eslint$/',
@@ -77,12 +77,7 @@
     },
     {
       // Group all react related packages
-      'groupName': 'react monorepo',
-      matchUpdateTypes: [
-        'major',
-        'minor',
-        'patch',
-      ],
+      'groupName': 'react',
       'matchPackageNames': [
         'react',
         'react-dom',
